@@ -1,6 +1,7 @@
 # Zend Skeleton with Camunda REST connection
 
-My first try to use zend php framework together with composer/mysql.
+My first try to use zend php framework together with composer/mysql. Then extend it by
+adding Camunda PHP SDK.
 
 No need for a running webserver, as using 
 
@@ -29,4 +30,17 @@ To create a module structure, you could use the following command - if the modul
 ```
 mkdir -pv Album/{config,src/Album/{Controller,Form,Model},view/album/album}
 ```
- 
+
+## Install Camunda
+
+I'm using Camunda 7.3.0-Alpha3 wildfly.zip . Just download it from camunda.org.
+
+As you might guess, per default, Camunda tries also to run on port 8080, but there's already
+php. So to change the port just add the offset, either to standalone.conf.bat or standalone.conf (Linux)
+
+```
+rem # JVM memory allocation pool parameters - modify as appropriate.
+set "JAVA_OPTS=-Xms512m -Xmx768m -XX:MaxPermSize=384m -Djboss.socket.binding.port-offset=100"
+```
+
+And Camunda will listens on port 8180.
